# swatchbook

./: .coveragerc  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  manage.py  passenger_wsgi.py  pyproject.toml  requirements.txt
.claude/: launch.json
catalog/: admin.py  api.py  filters.py  imaging.py  models.py  serializers.py
catalog/migrations/: 0001_initial.py  0002_seed_vocabularies.py  0003_drop_hex_color_and_catalog_code.py  0004_add_thermal_formula.py  0005_alter_polishphoto_image.py
config/: __init__.py  api_urls.py  urls.py
config/settings/: base.py  dev.py  prod.py  test.py
doc/: swatchbook-mockup-v1.html  swatchbook-mockup-v2.html  swatchbook-spec.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: api.js  main.js
frontend/src/alpine/: collectionCombo.js  compare.js  grid.js  logForm.js  logList.js  photoSlots.js  photoStrip.js  photoTile.js  polishSelect.js
frontend/src/styles/: _components.scss  _swatch.scss  _tokens.scss  main.scss
tests/: conftest.py  test_api.py  test_models.py  test_polish_forms.py  test_views.py
wearlog/: admin.py  api.py  apps.py  models.py  serializers.py
wearlog/migrations/: 0001_initial.py  0002_logentry_title.py  0003_alter_logphoto_image.py
web/: forms.py  pagination.py  urls.py  views.py
web/management/commands/: seed_demo.py
web/templates/: base.html
web/templates/registration/: login.html
web/templates/web/: _log_photo_row.html  _log_polish_row.html  _navbar.html  _photo_slot.html  _photo_slots.html  _swatch.html  _swatch_cell.html  collection.html  compare_picker.html  compare_result.html  log_confirm_delete.html  log_detail.html  log_form.html  log_list.html  polish_confirm_delete.html  polish_detail.html  polish_form.html  randomizer.html
web/templatetags/: vite.py
